Documetacao do path /auth/resources
